# agentic-soc-investigator

./: README.md  evaluate_agents.py  ingest_db.py  pyproject.toml  rag_baseline.py
SOC_DOCUMENTATIONS/: README.md
SOC_DOCUMENTATIONS/Incident_10/: 10.md
SOC_DOCUMENTATIONS/Incident_3/: SOC342 - CVE‑2025‑53770 SharePoint ToolShell Auth Bypass and RCE.md
SOC_DOCUMENTATIONS/Incident_4/: SOC338 - Lumma Stealer - DLL Side-Loading via Click Fix Phishing.md
SOC_DOCUMENTATIONS/Incident_6/: SOC326 - Impersonating Domain MX Record Change Detected.md
SOC_DOCUMENTATIONS/Incident_7/: SOC274 - Palo Alto Networks PAN-OS Command Injection Vulnerability Exploitation (CVE-2024-3400).md
SOC_DOCUMENTATIONS/Incident_8/: SOC127 - SQL Injection Detected.md
SOC_DOCUMENTATIONS/Incident_9/: SOC176 – RDP Brute Force.md
SOC_DOCUMENTATIONS/incident_2/: SOC335 - CVE-2024-49138 Exploitation Detected.md
chroma_db/: chroma.sqlite3
src/soc_investigator/: app.py  crew.py  main.py
src/soc_investigator/config/: agents.yaml  tasks.yaml
src/soc_investigator/tools/: custom_tool.py
